examples/test/testpolicy2232.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2232
  namespace: namespace79
spec:
  podSelector:
    matchLabels:
      key44: value40
      key15: value0
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key45: value24
      podSelector:
        matchLabels:
          key2: value40
          key16: value10
